--- a/app/src/main/res/layout/activity_editor2.xml
+++ b/app/src/main/res/layout/activity_editor2.xml
@@ -10,13 +10,23 @@
         android:scrollbars="vertical"
         android:layout_width="match_parent"
         android:layout_height="match_parent"/>
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal"
+    android:layout_alignParentBottom="true">
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
+
         android:text="New"
-        android:onClick="onclick_New"></Button>
+        android:onClick="onClick_New"></Button>
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Delete"
+        android:onClick="onClick_Delete"></Button>
+</LinearLayout>
 
 
 
